--- a/index.html
+++ b/index.html
@@ -5,50 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 6</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        }
-        nav {
-            background: #cdcdcd;
-            padding: 5px;
-        }
-        nav h2 {
-            margin-left: 10px;
-            font-size: 20px;
-            color: #2b2b2b;
-        }
-        a {
-            text-decoration: none;
-            color: #1a60ba;
-        }
-        a:hover {
-            color: #498ce5;
-        }
-        ul {
-            list-style: none;
-            display: flex;
-            flex-direction: row;
-        }
-        ul li {
-            margin-left: 10px;
-        }
-        article {
-            display: flex;
-            flex-direction: row;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
-    <nav>
+    <nav class="p-0 pt-1">
         <h2>Laboratorio 6</h2>
         <ul>
-            <li><a href="#">Pagina 1</a></li>
-            <li><a href="#">Pagina 2</a></li>
-            <li><a href="#">Pagina 3</a></li>
+            <li><a class="btn btn-link" href="pagina1.html">Pagina 1</a></li>
+            <li><a class="btn btn-link" href="pagina2.html">Pagina 2</a></li>
+            <li><a class="btn btn-link" href="pagina3.html">Pagina 3</a></li>
         </ul>
     </nav>
     <br>
@@ -57,6 +25,7 @@
         <div style="margin-left: 10px;">
             <h1>Cachorrito</h1>
             <p>Un cachorrito con un buen mostacho</p>
+            <p>Visita las otras paginas para ver más contenido</p>
         </div>
     </article>
 
